--- a/latex/template.tex
+++ b/latex/template.tex
@@ -23,17 +23,18 @@
 
 \maketitle
 
+\thispagestyle{empty}
+\clearpage
+\setcounter{page}{1}
 \newpage
 
 \section*{Introduction}
 
-The Hopfield neural network [3] is a type of recurrent neural network that can serve as an associative memory. This enables users to retrieve a stored patterns from the network after iteration, close to the provided input pattern. The Hopfield network is also capable of producing strings of binary data given input, and a threshold function. This capability can drive the network to utilities in production of binary sequences for cryptography. In Cryptography and associative pattern recognition, the Hopfeild network is dependent on its input. In Cryptography this might be considered the keyspace of the network. Changes here, can lead to differences in periodicity, symmetry, and thereby can increase or decrease the resulting entropy in the encryption scheme. In image recognition too, dependence on an input is one of the network's limitations, especially when compared to the human brain in similar tasks.  The brain is capable of transitioning from one state to another even in the lack of an external stimulus. Unlike the Hopfield neural network, the brain does not get stuck in the state of the last pattern that was recalled. It was conjectured in [4] that the brain is able to do so because it is innately chaotic but transitions to a periodic behaviour when it focuses on stimuli, thereby recalling stored memories. Chaotic Hopfield networks have also shown to create flat cyphertext, and shown to overcome the weaknesses of similar chaotic cryptography schemes.  
-
-In the following, modifications to the Hopfield Network that make it chaotic and capable of recalling patterns in the same way as the human have been proposed. Modifications to the Hopfield Neural network that make it chaotic and capable of creating a high entropy encryption scheme is also proposed. The former, and first model, M-AdNN is the focus of the first part of this review.  The latter, and second model,  will be the focus of the last part. 
+The Hopfield neural network [3] is a type of recurrent neural network that acts as an associative memory, that enables storage of patterns which can be retrived using an iteration scheme starting from a user provided input pattern. The Hopfield network is also capable of producing strings of binary data given input, and a threshold function. This capability can drive the network to utilities in production of binary sequences for cryptography. First, a modified Hopfield Network, M-AdNN, that make it chaotic and capable of recalling patterns in the same way as the human have been reviewed. Then lastly, a modification to the Hopfield Neural network that makes it chaotic and capable of creating a high entropy encryption scheme is also reviewed.
 
 \section*{Methodology}
 
-In a Hopfield Network, viewed as associative memmory, the input pattern $y$ is updated using the following rule,
+In its basic form, the Hopfield network updates the input $y$ using the following rule,
 
 $$
 \begin{aligned}
@@ -59,7 +60,7 @@ $$
 w_{ij} = \frac{1}{p} \sum_{s=1}^p x_i^s x_j^s
 $$
 
-where $x^s$ represents the pattern that is to be stored in the network, with $p$ being the number of patterns to be stored.
+where $x^s$ represents the pattern that is to be stored in the network, if interpreted as an associative memory, with $p$ being the number of patterns to be stored.
 
 \subsection*{Pattern Recognition}
 
@@ -88,7 +89,7 @@ $$
 
 $J_{ij}^1(t) = \frac{\partial \eta_i(t+1)}{\partial \eta_j(t)}, J_{ij}^2(t) = \frac{\partial \eta_i(t+1)}{\partial \xi_j(t)}, J_{ij}^3(t) = \frac{\partial \xi_i(t+1)}{\partial \eta_j(t)}, J_{ij}^4(t) = \frac{\partial \xi_i(t+1)}{\partial \xi_j(t)}$
 
-The lyapunov exponents of the system are given by the natural logarithm of the eigenvalues of the matrix $\Lambda_A := [J(A)J(A)^T]^{\frac{1}{2}}$, which are discovered to be ${\frac{1}{2}}ln(N) + ln(k_f)$ and ${\frac{1}{2}}ln(N) + ln(k_r)$, and the rest of the lyapunov exponents being $-\infty$. Therefore, if either of the finite lyapunov are positive, the system exhibits chaotic behaviour. Although, it appears that $k_f$ and $k_r$ determine the behaviour of the system, it is also discovered that $\alpha$ also plays an important role as a bifurcation parameter [8]. As a system capable of pattern recognition, it can determined weather the M-AdNN has converged to a periodic orbit by studying computing the distance from each of the stored patterns. The periodicity was measured to be the number of steps between each step where the output was observed to be close to the same stored pattern. After a few transient steps, it was observed that the inputs resonated with only one of the stored pattern. Although possible that the output can resonate with another stored pattern, the authors argued that they did not observe such behaviour in the 1000 iterations they ran. If it were the case that there was another attractor, its periodicity would be orders of magnitude higher than relatively lower periodicity observed for the trained pattern initially. In such case, the input pattern is classified as the stored pattern with lower periodicity.
+The lyapunov exponents of the system are given by the natural logarithm of the eigenvalues of the matrix $\Lambda_A := [J(A)J(A)^T]^{\frac{1}{2}}$, which are discovered to be ${\frac{1}{2}}ln(N) + ln(k_f)$ and ${\frac{1}{2}}ln(N) + ln(k_r)$, and the rest of the lyapunov exponents being $-\infty$. Therefore, if either of the finite lyapunov are positive, the system exhibits chaotic behaviour. Although, it appears that $k_f$ and $k_r$ determine the behaviour of the system, it is also discovered that $\alpha$ also plays an important role as a bifurcation parameter [8]. As a system capable of pattern recognition, it can determined weather the M-AdNN has converged to a periodic orbit by studying computing the distance of the output from each of the stored patterns. The periodicity was measured to be the number of steps between each step where the output was observed to be close to the same stored pattern. After a few transient steps, it was observed that the inputs resonated with only one of the stored pattern. Although possible that the output can resonate with another stored pattern, the authors argued that they did not observe such behaviour in the 1000 iterations that they ran. If it were the case that there was another attractor, its periodicity would be orders of magnitude higher than the relatively lower periodicity observed for the trained pattern initially. In such case, the input pattern is classified as the stored pattern with lower periodicity.
 
 
 \subsection*{Cryptography}
@@ -119,7 +120,7 @@ The initial conditions of the network, \((a_1, a_2, g_1, g_2, T_{12}, T_{21}, N_
 First, we normalize the node data \(t_{k}\) between zero and one. Where the following applies to \(t \in (t_{0}, t_{k})\)
 \[\frac{t_{k} - d}{e -d} = 0.b_{1}b_{2}b_{3}\dots\]
 
-Note that the above is for the output of any of the two nodes, while the purpose as described by the paper is to switch between nodes.  
+Note that the above is for the output of any of the two nodes, while the purpose as described by the paper is to switch between nodes.
 Using the following Series, and threshold function, we can represent any \(b_{i}(t)\) as follows
 \[b_{i}(t) = \sum_{r=1}^{2^{i} - 1}(-1)^{r-1}\Theta_{(e - d)(r/2^{i}) + d}(t)\]
 
@@ -132,7 +133,7 @@ Using the following Series, and threshold function, we can represent any \(b_{i}
 
 Using the above, we take the following steps to complete the algorithm
 \begin{enumerate}
-    \item take the plaintext message and divide it into chunks of length 4 bytes. 
+    \item take the plaintext message and divide it into chunks of length 4 bytes.
     \item having iterated 38 times take 32 bytes and produce a Integer \(A_{j}\)
     \item Take the remaining 6 bytes and take 5 for an integer \(D_j\) and 1 for determining the next trajectory (x or y)
     \item Using the plain-text \(P_j\) created earlier, we permute both \(P_j\) and \(A_j\) by \(D_j\) giving \(P'_{j}\) and \(A'_{j}\). Then finally xor \(P'_j\) and \(A'_j\)
@@ -141,14 +142,14 @@ Using the above, we take the following steps to complete the algorithm
 \subsubsection*{Statistical Attack ( periodic/"pattern" attack )}
 In the Paper the authors discuss the Approximately random histogram distribution of correlation between cipher-text and plain-text. The Flatness of the curve indicates the algorithms strong resistance to statistical attack. Between adjacent pixel pairs it is shown that the sequences are highly independent of one another.
 \subsubsection*{Differential Attack ( "difference from original" attack) }
-By checking the gradient of pixels of the original image to surrounding pixels in the ciphered image, it is shown that for the case used by the authors, there was a more than 98\% difference between the original pixel and the cipher pixels. Showing the System to be strong against differential attack as well in this instance. 
+By checking the gradient of pixels of the original image to surrounding pixels in the ciphered image, it is shown that for the case used by the authors, there was a more than 98\% difference between the original pixel and the cipher pixels. Showing the System to be strong against differential attack as well in this instance.
 \subsubsection*{Security Key Analysis}
 The Hopfield network is considered to have highly sensitive keys with respect to it's initial condition. The Authors also note, that a secure cryptosystem requires a large key space. Using the example (3) we note that the available combination of initial conditions and activation functions,  can be considered infinitely large, and therefore has secure keys
 
 
 \section*{Conclusion}
 
-We have shown that modifications to the Hopfield Network that make it chaotic and capable of recalling patterns in similar ways as the human brain.  We also showed modifications to the Hopfield Neural network that makes it chaotic, and capable of creating a high entropy encryption scheme. These two systems together are Examples of the applications of Chaotic Hopfield Neural Networks. Further study that includes both areas might include a layered encryption scheme that encrypts a unrecognizable image, only recognizable through decryption then iteration via the M-AdNN. Further study might also include using a greater number of nodes in order to determine the recognition value at greater scale, or in the encryption case, attempting to encode sound and video at speed, using FPGA's or other dedicated hardware as well as a analysis of its entropy when compared to a quantum brute force algorithm. 
+We have shown that modifications to the Hopfield Network that make it chaotic and capable of recalling patterns in similar ways as the human brain.  We also showed modifications to the Hopfield Neural network that makes it chaotic, and capable of creating a high entropy encryption scheme. These two systems together are examples of the applications of Chaotic Hopfield Neural Networks. Further study that could include both areas of research might be that of a layered encryption scheme that encrypts an unrecognizable image, only recognizable through decryption then iteration via the M-AdNN. Further study might also include using a greater number of nodes in order to determine the recognition value at greater scale, or in the encryption case, attempting to encode sound and video at speed, using FPGA's or other dedicated hardware as well as a analysis of its entropy when compared to a quantum brute force algorithm.
 
 \section*{References}
 
